# ml-cloud-optimizer

./: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  MLOPS.md  MLOPS_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  RESULTS.md  docker-compose.airflow.yml  pyproject.toml
airflow/: README.md  __init__.py  feast_repo.py  feature_store.yaml
airflow/dags/: ml_cloud_optimizer_dag.py
config/: .env.example
dashboards/: main.py
deploy/docker/: Dockerfile
deploy/kubernetes/: deployment.yaml
notebooks/: 01_EDA.ipynb
sql/: 01_create_tables.sql  02_olap_queries.sql
src/ml_cloud_optimizer/: __init__.py
src/ml_cloud_optimizer/data/: __init__.py  database.py  generator.py
src/ml_cloud_optimizer/features/: __init__.py  engineering.py
src/ml_cloud_optimizer/ml_ops/: __init__.py  mlflow_utils.py
src/ml_cloud_optimizer/models/: __init__.py  base.py
src/ml_cloud_optimizer/monitoring/: __init__.py  metrics.py
src/ml_cloud_optimizer/pipeline/: __init__.py  imbalanced.py  training.py
src/ml_cloud_optimizer/utils/: config.py
tests/: test_airflow_integration.py  test_core.py
